2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Keep track of pid, automatically remove
	  drive if the pid is dead.

2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Add validate_optionstr,  optionstr and
	  xml_optionstr no longer do validation..
	* server-src/diskfile.h: Add validate_optionstr, change prototype for
	  optionstr and xml_optionstr.
	* server-src/amadmin.c: Add missing case.
	* server-src/amcheck.c, server-src/amindexd.c, server-src/planner.c:
	  Use validate_optionstr, Change for new *_optionstr prototype.
	* server-src/driver.c: Use validate_optionstr.
	* server-src/driverio.c: Change for new *_optionstr prototype.
	* installcheck/amdump.pl: Check planner error from validate_optionstr.

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_NDMP.pl device-src/ndmp-device.c
	  ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: return an object with
	  an error set instead of just returning an error from the constructor
	* perl/Makefile.am perl/Amanda/NDMP.swg: SWIGging of ndmpconnobj
	* perl/Amanda/NDMP.pod: docs for same

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: add ndmp_scsi_*

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/amglue.h: amglue_newSv[iu]64 requires special care
	  when used in an outgoing typemap, due to stack stomping
	* perl/Amanda/Archive.swg perl/Amanda/Config.swg
	  perl/Amanda/Device.swg perl/Amanda/Util.swg perl/amglue/bigint.c
	  perl/amglue/integers.swg: exercise care as directed

2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Wait to parse the header before
	  confirming destination directory. Unlink files only for GNUTAR
	  and amgtar.
	* client-src/client_util.c: Parse RECOVER-PATH application support
				    result.
	* client-src/client_util.h: Add recover_path_t.

2009-12-14  Dustin J. Mitchell <dustin@zmanda.com>