@@ -1,3 +1,6 @@
+2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
+	* device-src/ndmp-device.c: fix use of ndmp4_* enumerated types
+
 2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/disk.pm: Keep track of pid, automatically remove
 	  drive if the pid is dead.
